@@ -403,6 +403,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - src/pulsemanager.cpp: remove unused variables.
     - src/unixhelper.cpp: code cleanup.
     - src/{unixhelper.cpp,x2goclient.cpp}: fix errno usage - save before use.
+    - src/onmainwindow.cpp: document createRSAKey () because what it does is
+      completely non-obvious.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
